kubernetes/applications/gatebound/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: gatebound
spec:
  selector:
    app.kubernetes.io/name: gatebound-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
