kubernetes/applications/gatebound/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatebound-web
  namespace: gatebound
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gatebound-web
  ports:
    - { name: http, port: 3000, targetPort: http, protocol: TCP }
